updated swagger docs
